Links were broken. "freecodecamp" folder as root. Relative linking has been implemented.

--- a/survey_form/survey_form.html
+++ b/survey_form/survey_form.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Survey Form Project</title>
-  <link rel="stylesheet" href="/freecodecamp/survey_form/suvey_form.css">
+  <link rel="stylesheet" href="./suvey_form.css">
 </head>
 
 <body>
