--- a/tribute_page/tribute_page.html
+++ b/tribute_page/tribute_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Norman Borlaug</title>
-    <link rel="stylesheet" href="/freecodecamp/tribute_page/tribute_page.css">
+    <link rel="stylesheet" href="./tribute_page.css">
 </head>
 <body>
     <main id="main">
